# fire-defense

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  component-template.mk  render.yaml  rustfmt.toml
.github/: CODEOWNERS
data-source-irwin/: .monorepo-component  Cargo.toml  Makefile  README.md
data-source-irwin/docs/: IRWIN_Incidents_API_ReadOnly.md  README.md
data-source-irwin/examples/: basic_usage.rs
data-source-irwin/src/: error.rs  lib.rs  main.rs  types.rs
docs/: LINTING.md  README.md  getting-started.md  makefile-usage.md  multi-language-components.md
firefinder-service/: .monorepo-component  Makefile  README.md  main.py  pyproject.toml
firefinder-service/docs/: README.md  adapters.md  app.md  math.md  render_deploy.md  testing.md
firefinder-service/src/firefinder-service/: __init__.py  main.py
firefinder-service/src/firefinder_service/: __init__.py  main.py  math.py  models.py  payloads.py  protocols.py  service.py  typedefs.py  webapp.py
firefinder-service/src/firefinder_service/adapters/: __init__.py  arcgis.py  arcgis_rest.py  in_memory.py  waterfall.py
firefinder-service/src/templates/: index.html
firefinder-service/tests/: conftest.py  test_arcgis_rest_adapter.py  test_finder_service.py  test_firefinder-service.py  test_in_memory_adapter.py  test_integation_end_to_end.py  test_math_typedefs.py  test_model_payloads.py  test_waterfall_adapter.py  test_webapp_endpoints.py
scripts/: setup-pre-commit.sh
suppression-policy-engine/: .monorepo-component  Cargo.toml  Makefile  README.md
suppression-policy-engine/docs/: README.md  architecture.md  controlbyweb_driver.md
suppression-policy-engine/src/: engine.rs  error.rs  idempotency.rs  lib.rs  main.rs  models.rs  state.rs  time.rs  web.rs
suppression-policy-engine/src/dal/: command.rs
suppression-policy-engine/src/dal/drivers/: control_by_web.rs  mock.rs  mod.rs
suppression-policy-engine/src/device_abstraction_layer/: mod.rs  traits.rs
suppression-policy-engine/src/device_abstraction_layer/drivers/: mock.rs  mod.rs
suppression-policy-engine/src/device_abstraction_layer/drivers/control_by_web/: account.rs  client.rs  config.rs  device_access.rs  mod.rs  relay_plan.rs  token.rs
suppression-policy-engine/src/enactor/: mod.rs
suppression-policy-engine/src/policy/: mod.rs  registry.rs  types.rs
suppression-policy-engine/src/routes/: index.rs  mod.rs
suppression-policy-engine/src/routes/v1/: health.rs  installations.rs  mod.rs  runs.rs
suppression-policy-engine/src/spr/: runner.rs
suppression-policy-engine/src/suppression_policy_runner/: mod.rs  runner.rs
suppression-policy-engine/src/telemetry/: mod.rs  sink.rs
suppression-policy-engine/template/: index.html  policy_row.html
suppression-policy-engine/templates/: index.html  policy_table.html
weather-service/: .monorepo-component  Makefile  README.md  main.py  pyproject.toml
weather-service/docs/: README.md  RENDER_DEPLOY.md  adapters.md  app.md  math.md  roadmap.md  testing.md
weather-service/src/templates/: index.html
weather-service/src/weather_service/: __init__.py  main.py  math.py  models.py  payloads.py  protocols.py  service.py  typedefs.py  webapp.py
weather-service/src/weather_service/adapters/: __init__.py  ndbc.py  nws.py
weather-service/src/weather_service/adapters/ndbc/: __init__.py  adapter.py  parser.py  resolver.py
weather-service/tests/: conftest.py  test_adapters_ndbc.py  test_adapters_nws.py  test_math.py  test_service_policy.py  test_service_privacy_resolver.py  test_service_routing.py  test_typedefs_models.py  test_weather_service.py
wind-data-playground/: .monorepo-component  Makefile  README.md  main.py  pyproject.toml
wind-data-playground/docs/: README.md
wind-data-playground/src/wind-data-playground/: __init__.py  main.py
wind-data-playground/tests/: test_wind-data-playground.py
