[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firefinder-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
]

#arcgis = [
#   if using arcgis natively instead of using the REST api.
#   See firefinder-service/src/firefinder_service/adapters/arcgis.py
#    "arcgis>=2.3.0",
#]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["firefinder_service*"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.1.0",
    "pytest>=8.4.2",
    "responses>=0.25.8",
]
