name = "wind-data-playground"
version = "0.1.0"
description = "wind-data-playground component"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]
